--- a/sass/content/_sidebar.scss
+++ b/sass/content/_sidebar.scss
@@ -310,7 +310,7 @@
 				}
 			}
 			.not-required {
-				display: block;
+				display: none;
 				float: left;
 				position: relative;
 				width: 100%;
