--- a/sass/content/_page.scss
+++ b/sass/content/_page.scss
@@ -127,3 +127,77 @@
 		}
 	}
 }
+
+.news-category {
+	&__navs {
+		margin-bottom: 0!important;
+	}
+	&__wrap {
+		display: block;
+		float: left;
+		position: relative;
+		width: 100%;
+	}
+	&__item {
+		display: block;
+		float: left;
+		position: relative;
+		width: 100%;
+		height: 300px;
+	    border-bottom: 1px solid #e5e5e5;
+		&--thumb {
+			display: block;
+			float: left;
+			width: 50%;
+			position: relative;
+			@include overflow-img;
+			height: 300px;
+			img {
+				min-height: 100%;
+			}
+		}
+		&--desc {
+			display: block;
+			float: left;
+			position: relative;
+			width: 50%;
+			@include inside-pad;
+			padding: 25px;
+			height: 300px;
+			h3 {
+				font-family: $b;
+				color: #EF4036;
+				font-size: 25px;
+			}
+			p {
+				font-family: $r;
+				font-size: 18px;
+				color: #000;
+			}
+			&--date {
+				font-size: 14px;
+				color: #7F7F7F;
+				position: absolute;
+    			bottom: 35px;
+			}		
+			
+		}
+		&:after {
+			content: "";
+			pointer-events: none;
+			top: 10px;
+			left: 10px;
+			right: 10px;
+			bottom: 10px;
+		    border: 8px solid #EF4036;
+		    position: absolute;
+		    opacity: 0;
+		}
+		&:hover, &:active, &:focus {
+			background-color: darken(#fff,10%);
+			&:after {
+				opacity: 1;
+			}
+		}
+	}
+}
