--- a/sass/style.css
+++ b/sass/style.css
@@ -1038,7 +1038,7 @@ ul {
           color: #fff;
           background-color: #f14036; }
       .basket__content__order--standart .not-required {
-        display: block;
+        display: none;
         float: left;
         position: relative;
         width: 100%;
@@ -1273,6 +1273,79 @@ img.preLoader {
       font-size: 10px;
       color: #A0A0A0;
       font-family: "ProximaNovaRegular"; }
+
+.news-category__navs {
+  margin-bottom: 0 !important; }
+.news-category__wrap {
+  display: block;
+  float: left;
+  position: relative;
+  width: 100%; }
+.news-category__item {
+  display: block;
+  float: left;
+  position: relative;
+  width: 100%;
+  height: 300px;
+  border-bottom: 1px solid #e5e5e5; }
+  .news-category__item--thumb {
+    display: block;
+    float: left;
+    width: 50%;
+    position: relative;
+    overflow: hidden;
+    height: 300px; }
+    .news-category__item--thumb img {
+      min-width: 100%;
+      height: auto;
+      position: relative;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%); }
+    .news-category__item--thumb img {
+      min-height: 100%; }
+  .news-category__item--desc {
+    display: block;
+    float: left;
+    position: relative;
+    width: 50%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 25px;
+    height: 300px; }
+    .news-category__item--desc:before, .news-category__item--desc:after {
+      display: table;
+      content: " "; }
+    .news-category__item--desc:after {
+      clear: both; }
+    .news-category__item--desc h3 {
+      font-family: "ProximaNovaBold";
+      color: #EF4036;
+      font-size: 25px; }
+    .news-category__item--desc p {
+      font-family: "ProximaNovaRegular";
+      font-size: 18px;
+      color: #000; }
+    .news-category__item--desc--date {
+      font-size: 14px;
+      color: #7F7F7F;
+      position: absolute;
+      bottom: 35px; }
+  .news-category__item:after {
+    content: "";
+    pointer-events: none;
+    top: 10px;
+    left: 10px;
+    right: 10px;
+    bottom: 10px;
+    border: 8px solid #EF4036;
+    position: absolute;
+    opacity: 0; }
+  .news-category__item:hover, .news-category__item:active, .news-category__item:focus {
+    background-color: #e6e6e6; }
+    .news-category__item:hover:after, .news-category__item:active:after, .news-category__item:focus:after {
+      opacity: 1; }
 
 .footer {
   display: block;
