--- a/sass/content/_page.scss
+++ b/sass/content/_page.scss
@@ -145,6 +145,7 @@
 		width: 100%;
 		height: 300px;
 	    border-bottom: 1px solid #e5e5e5;
+	    @include transition(.3s);
 		&--thumb {
 			display: block;
 			float: left;
@@ -192,6 +193,7 @@
 		    border: 8px solid #EF4036;
 		    position: absolute;
 		    opacity: 0;
+		    @include transition(.3s);
 		}
 		&:hover, &:active, &:focus {
 			background-color: darken(#fff,10%);
@@ -201,3 +203,4 @@
 		}
 	}
 }
+
