--- a/sass/content/_page.scss
+++ b/sass/content/_page.scss
@@ -114,6 +114,20 @@
 			font-family: $r;
 		}
 	}
+	&--img{
+		width: 100%;
+		height: 100%;
+		display: block;
+		float: left;
+		margin-top: 15px;
+		img{
+			display: block;
+			width: 50px;
+			height: 50px;
+			margin: 0 auto;
+			border-radius: 50%;
+		}
+	}
 	&--date {
 		display: block;
 		float: left;
