--- a/sass/content/_page.scss
+++ b/sass/content/_page.scss
@@ -84,6 +84,7 @@
 		display: block;
 		float: left;
 		position: relative;
+		width: 100%;
 		margin: 25px 0;
 	}
 	&--title {
@@ -138,6 +139,67 @@
 			font-size: 10px;
     		color: #A0A0A0;
     		font-family: $r;
+		}
+	}
+}
+
+.page-coments-form{
+	&__title{
+		h3{
+			text-transform: uppercase;
+			font-weight: 700;
+			font-size: 30px;
+			text-align: center;
+			font-family: "ProximaNovaBold";
+			margin-bottom: 20px;
+		}
+	}
+	&__form{
+		span{
+			display: block;
+			font-size: 12px;
+			margin-bottom: 5px;
+		}
+		input[type='text']{
+			display: block;
+			width: 100%;
+			font-size: 12px;
+			line-height: 14px;
+			padding: 9px 13px 9px 26px;
+			border-radius: 24px;
+			border: 1px solid rgba(0,0,0,.5);
+			margin-bottom: 16px;
+			color: #444;
+			outline: none;
+		}
+		textarea{
+			display: block;
+			width: 100%;
+			font-size: 12px;
+			line-height: 14px;
+			padding: 9px 13px 9px 26px;
+			border-radius: 24px;
+			border: 1px solid rgba(0,0,0,.5);
+			margin-bottom: 16px;
+			color: #444;
+			resize: none;
+			outline: none;
+		}
+		input[type='submit']{
+			display: block;
+			margin: 10px auto 0 auto;
+			padding: 2px 30px;
+			border-radius: 15px;
+			border: 1px solid #EF3F35;
+			background: transparent;
+			color: #EF3F35;
+			outline: none;
+			text-transform: uppercase;
+			&:hover{
+				background-color: #EF3F35;
+				color: #fff;
+				@include transition(.3s);
+			}
 		}
 	}
 }
