--- a/sass/style.css
+++ b/sass/style.css
@@ -1240,6 +1240,7 @@ img.preLoader {
     display: block;
     float: left;
     position: relative;
+    width: 100%;
     margin: 25px 0; }
   .page-coments--title {
     display: block;
@@ -1287,6 +1288,59 @@ img.preLoader {
       font-size: 10px;
       color: #A0A0A0;
       font-family: "ProximaNovaRegular"; }
+
+.page-coments-form__title h3 {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 30px;
+  text-align: center;
+  font-family: "ProximaNovaBold";
+  margin-bottom: 20px; }
+.page-coments-form__form span {
+  display: block;
+  font-size: 12px;
+  margin-bottom: 5px; }
+.page-coments-form__form input[type='text'] {
+  display: block;
+  width: 100%;
+  font-size: 12px;
+  line-height: 14px;
+  padding: 9px 13px 9px 26px;
+  border-radius: 24px;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  margin-bottom: 16px;
+  color: #444;
+  outline: none; }
+.page-coments-form__form textarea {
+  display: block;
+  width: 100%;
+  font-size: 12px;
+  line-height: 14px;
+  padding: 9px 13px 9px 26px;
+  border-radius: 24px;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  margin-bottom: 16px;
+  color: #444;
+  resize: none;
+  outline: none; }
+.page-coments-form__form input[type='submit'] {
+  display: block;
+  margin: 10px auto 0 auto;
+  padding: 2px 30px;
+  border-radius: 15px;
+  border: 1px solid #EF3F35;
+  background: transparent;
+  color: #EF3F35;
+  outline: none;
+  text-transform: uppercase; }
+  .page-coments-form__form input[type='submit']:hover {
+    background-color: #EF3F35;
+    color: #fff;
+    -webkit-transition: all 0.3s linear;
+    -moz-transition: all 0.3s linear;
+    -ms-transition: all 0.3s linear;
+    -o-transition: all 0.3s linear;
+    transition: all 0.3s linear; }
 
 .news-category__navs {
   margin-bottom: 0 !important; }
