--- a/sass/style.css
+++ b/sass/style.css
@@ -1407,7 +1407,7 @@ img.preLoader {
       bottom: 35px;
       display: block; }
   .news-category__item:after {
-    content: "";
+    content: none;
     pointer-events: none;
     top: 10px;
     left: 10px;
