--- a/css/style-igor.css
+++ b/css/style-igor.css
@@ -451,7 +451,7 @@ a.basket__foot--order--noactive {
 
 .basket__content__order--advanced--label{
     display: block;
-    font-family: 'ProximaNovaLight';
+    font-family: 'ProximaNovaRegular';
     margin-bottom: 7px;
     padding-left: 14px;
     font-size: 10px;
