--- a/css/style-igor.css
+++ b/css/style-igor.css
@@ -595,5 +595,23 @@ a.basket__foot--order--noactive {
     margin-bottom: 20px;
 }
 
+.page-coments--rating ul, .reviews__carousel__item ul {
+    padding: 5px 10px!important;
+    box-sizing: border-box!important;
+    width: 80px!important;
+    background-color: #fff!important;
+}
+
+.page-coments--rating {
+    position: relative;
+    margin-top: -23px;
+    margin-bottom: 0;
+}
+
+.reviews.page-coments--rating, .reviews__carousel__item {
+        margin-top: -10px;
+}
+
+
 
 
