--- a/sass/content/_page.scss
+++ b/sass/content/_page.scss
@@ -85,7 +85,7 @@
 		float: left;
 		position: relative;
 		width: 100%;
-		margin: 25px 0;
+		margin: 20px 0;
 	}
 	&--title {
 		display: block;
@@ -97,17 +97,18 @@
 		h3 {
 			text-transform: uppercase;
 			font-weight: 700;
-			font-size: 30px;
+			font-size: 24px;
 			text-align: center;
 			font-family: $r;
 			margin-bottom: 0;
+			margin-top: 15px;
 		}
 	}
 	&--text {
 		display: block;
 		float: left;
 		width: 100%;
-		padding: 15px 0;
+		padding: 0 0 10px;
 		p {
 			font-size: 18px;
 			font-weight: 500;
@@ -116,17 +117,19 @@
 		}
 	}
 	&--img{
-		width: 100%;
-		height: 100%;
+		width: 58px;
+		height: 58px;
 		display: block;
-		float: left;
-		margin-top: 15px;
+		margin: 15px auto 0;
+		@include overflow-img;
+		@include border-radius(50%);
+		background-image: url('../img/dpc_Silhouette.png');
+		-webkit-background-size: cover;
+		     -o-background-size: cover;
+		        background-size: cover;
+		background-position: 50% 50%;
 		img{
-			display: block;
-			width: 50px;
-			height: 50px;
-			margin: 0 auto;
-			border-radius: 50%;
+			max-width: 200%;
 		}
 	}
 	&--date {
