--- a/sass/style.css
+++ b/sass/style.css
@@ -574,7 +574,12 @@ ul {
       border-radius: 33px;
       display: block;
       margin: 15px auto;
-      overflow: hidden; }
+      overflow: hidden;
+      background-image: url("../img/dpc_Silhouette.png");
+      -webkit-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+      background-position: 50% 50%; }
       .reviews__carousel__item--img img {
         min-width: 100%;
         height: auto;
@@ -1241,7 +1246,7 @@ img.preLoader {
     float: left;
     position: relative;
     width: 100%;
-    margin: 25px 0; }
+    margin: 20px 0; }
   .page-coments--title {
     display: block;
     float: left;
@@ -1252,32 +1257,45 @@ img.preLoader {
     .page-coments--title h3 {
       text-transform: uppercase;
       font-weight: 700;
-      font-size: 30px;
+      font-size: 24px;
       text-align: center;
       font-family: "ProximaNovaRegular";
-      margin-bottom: 0; }
+      margin-bottom: 0;
+      margin-top: 15px; }
   .page-coments--text {
     display: block;
     float: left;
     width: 100%;
-    padding: 15px 0; }
+    padding: 0 0 10px; }
     .page-coments--text p {
       font-size: 18px;
       font-weight: 500;
       text-align: center;
       font-family: "ProximaNovaRegular"; }
   .page-coments--img {
-    width: 100%;
-    height: 100%;
+    width: 58px;
+    height: 58px;
     display: block;
-    float: left;
-    margin-top: 15px; }
+    margin: 15px auto 0;
+    overflow: hidden;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    border-radius: 50%;
+    background-image: url("../img/dpc_Silhouette.png");
+    -webkit-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-position: 50% 50%; }
     .page-coments--img img {
-      display: block;
-      width: 50px;
-      height: 50px;
-      margin: 0 auto;
-      border-radius: 50%; }
+      min-width: 100%;
+      height: auto;
+      position: relative;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%); }
+    .page-coments--img img {
+      max-width: 200%; }
   .page-coments--date {
     display: block;
     float: left;
