--- a/sass/responsive/_style.scss
+++ b/sass/responsive/_style.scss
@@ -417,6 +417,22 @@
 	    line-height: 50px;
 	    margin-top: 15px;
 	}
+	.navigation--logo {
+	    width: 75px;
+	}
+	.navigation {
+	    min-height: 48px;
+	}
+	.main__wrapper {
+		padding-top: 48px;
+	}
+	.navigation--box--menutoggle, .navigation--box--showbasket, .navigation--box--showbasket {
+		padding: 0;
+		margin-top: 0;
+	}
+	.navigation--box--menutoggle a, .navigation--box--showbasket a, .navigation--box--showbasket a {
+		margin-top: 0;
+	}
 }
 
 @media only screen and (max-width: 500px) {
@@ -442,6 +458,15 @@
 	    background-color: #2C2C2C;
 	    padding: 10px 0;
 	    width: 100%;
+	}
+	.navigation--logo {
+	    width: 75px;
+	}
+	.navigation {
+	    min-height: 48px;
+	}
+	.main__wrapper {
+		padding-top: 48px;
 	}
 	.basket--width {
 	    padding: 0;
@@ -515,6 +540,13 @@
 	.navigation--box {
 	    width: 100%;
 	}
+	.navigation--box--menutoggle, .navigation--box--showbasket, .navigation--box--showbasket {
+		padding: 0;
+		margin-top: 0;
+	}
+	.navigation--box--menutoggle a, .navigation--box--showbasket a, .navigation--box--showbasket a {
+		margin-top: 0;
+	}
 }
 
 @media only screen and (max-width: 320px) {
@@ -527,13 +559,13 @@
 		font-size: 30px;
 	}
 	.navigation--logo {
-	    width: 80px;
+	    width: 60px;
 	}
 	.navigation {
-	    min-height: 55px;
+	    min-height: 48px;
 	}
 	.main__wrapper {
-		padding-top: 55px;
+		padding-top: 48px;
 	}
 	.navigation--navline--active {
 	    margin-left: -100px;
