--- a/sass/style.css
+++ b/sass/style.css
@@ -1850,7 +1850,23 @@ img.preLoader {
     font-size: 15px;
     height: 50px;
     line-height: 50px;
-    margin-top: 15px; } }
+    margin-top: 15px; }
+
+  .navigation--logo {
+    width: 75px; }
+
+  .navigation {
+    min-height: 48px; }
+
+  .main__wrapper {
+    padding-top: 48px; }
+
+  .navigation--box--menutoggle, .navigation--box--showbasket, .navigation--box--showbasket, .navigation--box--showbasket {
+    padding: 0;
+    margin-top: 0; }
+
+  .navigation--box--menutoggle a, .navigation--box--showbasket a, .navigation--box--showbasket a, .navigation--box--showbasket a {
+    margin-top: 0; } }
 @media only screen and (max-width: 500px) {
   .basket--width {
     display: none; }
@@ -1873,6 +1889,15 @@ img.preLoader {
     background-color: #2C2C2C;
     padding: 10px 0;
     width: 100%; }
+
+  .navigation--logo {
+    width: 75px; }
+
+  .navigation {
+    min-height: 48px; }
+
+  .main__wrapper {
+    padding-top: 48px; }
 
   .basket--width {
     padding: 0; }
@@ -1936,7 +1961,14 @@ img.preLoader {
     height: auto; }
 
   .navigation--box {
-    width: 100%; } }
+    width: 100%; }
+
+  .navigation--box--menutoggle, .navigation--box--showbasket, .navigation--box--showbasket, .navigation--box--showbasket {
+    padding: 0;
+    margin-top: 0; }
+
+  .navigation--box--menutoggle a, .navigation--box--showbasket a, .navigation--box--showbasket a, .navigation--box--showbasket a {
+    margin-top: 0; } }
 @media only screen and (max-width: 320px) {
   .social-media {
     -webkit-background-size: cover;
@@ -1947,13 +1979,13 @@ img.preLoader {
     font-size: 30px; }
 
   .navigation--logo {
-    width: 80px; }
+    width: 60px; }
 
   .navigation {
-    min-height: 55px; }
+    min-height: 48px; }
 
   .main__wrapper {
-    padding-top: 55px; }
+    padding-top: 48px; }
 
   .navigation--navline--active {
     margin-left: -100px; }
