--- a/sass/content/_index.scss
+++ b/sass/content/_index.scss
@@ -170,7 +170,7 @@
 		color: #263A47;
 		font-family: $r;
 		font-weight: 700;
-		margin: 0;
+		margin: 1px 0 0;
 		line-height: 25px;
 	}
 	&--icon-wrap  {
