--- a/sass/style.css
+++ b/sass/style.css
@@ -515,7 +515,7 @@ ul {
     color: #263A47;
     font-family: "ProximaNovaRegular";
     font-weight: 700;
-    margin: 0;
+    margin: 1px 0 0;
     line-height: 25px; }
   .social-media--icon-wrap a {
     display: block;
