--- a/sass/style.css
+++ b/sass/style.css
@@ -1857,9 +1857,6 @@ img.preLoader {
     line-height: 50px;
     margin-top: 15px; }
 
-  .basket__foot--wrap--required p {
-    bottom: 104px; }
-
   .navigation--logo {
     width: 75px; }
 
@@ -1976,7 +1973,10 @@ img.preLoader {
     margin-top: 0; }
 
   .navigation--box--menutoggle a, .navigation--box--showbasket a, .navigation--box--showbasket a, .navigation--box--showbasket a {
-    margin-top: 0; } }
+    margin-top: 0; }
+
+  .basket__foot--wrap--required p {
+    bottom: 104px !important; } }
 @media only screen and (max-width: 320px) {
   .social-media {
     -webkit-background-size: cover;
