--- a/sass/responsive/_style.scss
+++ b/sass/responsive/_style.scss
@@ -435,7 +435,13 @@
 		margin-top: 0;
 	}
 
+	.basket__foot--wrap--required p{
+		bottom: 104px;
+	}
 
+	.thankBody {
+		margin: 0!important;
+	}
 }
 
 @media only screen and (max-width: 500px) {
