--- a/sass/style.css
+++ b/sass/style.css
@@ -2017,6 +2017,12 @@ img.preLoader {
 
   .navigation--box {
     width: 100%;
-    margin-left: 100px; } }
+    margin-left: 100px; }
+
+  .reviews i.fa.fa-chevron-right.slick-arrow, .templatepage i.fa.fa-chevron-right.slick-arrow {
+    right: 15%; }
+
+  .reviews i.fa.fa-chevron-left.slick-arrow, .templatepage i.fa.fa-chevron-left.slick-arrow {
+    left: 15%; } }
 
 /*# sourceMappingURL=style.css.map */
