--- a/css/style-igor.css
+++ b/css/style-igor.css
@@ -611,6 +611,9 @@ a.basket__foot--order--noactive {
 .reviews.page-coments--rating, .reviews__carousel__item {
         margin-top: -10px;
 }
+.c-rating {
+    margin-left: 0;
+}
 
 
 
