--- a/sass/style.css
+++ b/sass/style.css
@@ -1874,7 +1874,7 @@ img.preLoader {
     margin-top: 0; }
 
   .basket__foot--wrap--required p {
-    bottom: 104px; }
+    bottom: 104px !important; }
 
   .thankBody {
     margin: 0 !important; } }
