--- a/sass/responsive/_style.scss
+++ b/sass/responsive/_style.scss
@@ -237,9 +237,15 @@
 		width: calc(100% - 150px);
 		//padding-right: 256px;
 	}
-	.navigation--box--topline {
-		width: 100%;
-		padding-right: 256px;	
+	// .navigation--box--topline {
+	// 	width: 100%;
+	// 	padding-right: 256px;	
+	// }
+	.navigation {
+		min-height: 80px;
+		&--logo {
+			width: 100px;
+		}
 	}
 	.navigation--logo {
 		position: absolute;
